--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.brodysoft.sqlitePlugin"
+    id="com.paceads.sqlitePlugin"
     version="1.0.3">
 
-    <name>Brodysoft SQLitePlugin</name>
+    <name>Brodysoft SQLitePlugin (Pace Mod)</name>
 
     <license>MIT</license>
 
