--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.paceads.sqlitePlugin"
-    version="1.0.4a">
+    version="1.0.5">
 
     <name>Brodysoft SQLitePlugin (Pace Mod)</name>
 
